# src/routers/index.js
@@ -3,7 +3,7 @@
 const router = require("express").Router();
 
 router.use("/auth", require("./authRouter"));
-router.use("/todos", require("./todoRouter"));
+router.use("/tasks", require("./taskRouter"));
 router.use("/tags", require("./tagRouter"));
 router.use("/users", require("./userRouter"));
 router.use("/tokens", require("./tokenRouter"));
